--- a/blog/main/templates/main/base.html
+++ b/blog/main/templates/main/base.html
@@ -15,5 +15,7 @@
   <p class="{{ message.tags }}">{{ message }}</p>
 {% endfor %}
 {% block content %}{% endblock %}
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+{% block script %}{% endblock %}
 </body>
 </html>
